--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <a href="index.html">Home</a>
       <a href="likes.html">Likes</a>
    </div>
+   <img id="fImg" src="assets/Filters.png" draggable="false" style="position: absolute; float: left; top: 0%; left:1em">
    <div id="roverSelScreen" class="container-fluid">
       <div id="roverRibbon">
          <h3 style="margin-top: 5px; text-decoration: underline;">Select Rover</h3>
